# serializer version: 1
# name: test_all_mappings
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "DRAFT",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": true,
      "applicant": [
          {
              "company": null,
              "email": "manfred@mapper.ch",
              "first_name": "Manfred",
              "is_juristic_person": false,
              "last_name": "Mapper",
              "phone": "076 331 9446",
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          },
          {
              "company": null,
              "email": "manu@mapper.ch",
              "first_name": "Manuela",
              "is_juristic_person": false,
              "last_name": "Mapper",
              "phone": null,
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "application_type": "Ordentlich",
      "attachments": null,
      "authorizations": [],
      "building": [
          {
              "egid": "2345",
              "insurance_number": "1234"
          },
          {
              "egid": "4567",
              "insurance_number": "3456"
          }
      ],
      "building_envelope_exterior_wall_color": "dunkelgrau",
      "building_envelope_exterior_wall_material": "Schiefer",
      "building_envelope_roof_covering_color": "grün",
      "building_envelope_roof_covering_material": "Beton",
      "building_heating_existing": true,
      "building_heating_new": true,
      "building_heating_new_kw": "2000",
      "building_heating_none": true,
      "building_heating_replacement": true,
      "building_heating_replacement_kw": "1000",
      "building_heating_type_district": true,
      "building_heating_type_electric": true,
      "building_heating_type_gas": true,
      "building_heating_type_heatpump": true,
      "building_heating_type_heatpump_air": true,
      "building_heating_type_heatpump_ground_water": true,
      "building_heating_type_oil": true,
      "building_heating_type_oil_new": true,
      "building_heating_type_other": true,
      "building_heating_type_other_text": "was ganz anderes",
      "building_heating_type_wood": true,
      "building_heating_unknown": true,
      "building_heating_unknown_explanation": "Some text here",
      "caluma_form_id": null,
      "canton_agv": true,
      "canton_application_codes": [
          {
              "value": "A02 / Art. 16a Landw. Wohnbauten, neue freistehende Gebäude"
          }
      ],
      "canton_archaeology": true,
      "canton_area_consumption": 2000,
      "canton_assignee": "EMARHUB001",
      "canton_awa": true,
      "canton_cantonal_road_affected": true,
      "canton_closure_code": "teilweise Zustimmung",
      "canton_comments": [
          {
              "text": "UE einfordern",
              "timestamp": 20221020163153,
              "user_id": "EB2_AFB_02"
          },
          {
              "text": null,
              "timestamp": 20221020163137,
              "user_id": "EB2_AFB_02"
          }
      ],
      "canton_construction_project_in_forest": true,
      "canton_cycle_paths": true,
      "canton_decision_type": "Bewilligung (BEWIL)",
      "canton_delay_caused_by": "Interne kant. Fachstellen konnten ihre Termine nicht einhalten (INT)",
      "canton_entry_date": "20250612",
      "canton_fees": [
          {
              "amount": 1,
              "calc_scheme_position": "0010",
              "calculation_scheme": "ATB",
              "comment_afb": null,
              "comment_fs": null,
              "cost_type": "ZATB",
              "description": "Behandlungsgebühr ATB",
              "msehi": "LE",
              "request_task_id": "000000028333",
              "show_in_gv": false,
              "take": false,
              "unit_price": 0
          },
          {
              "amount": 1,
              "calc_scheme_position": "0010",
              "calculation_scheme": "AW KFA 1",
              "comment_afb": null,
              "comment_fs": null,
              "cost_type": "ZROD",
              "description": "Rodungsbewilligung AW",
              "msehi": "LE",
              "request_task_id": "000000028332",
              "show_in_gv": false,
              "take": false,
              "unit_price": 0
          },
          {
              "amount": 1,
              "calc_scheme_position": "0020",
              "calculation_scheme": "ATB",
              "comment_afb": null,
              "comment_fs": null,
              "cost_type": "ZIAK",
              "description": "Aufbruchbewilligung ATB",
              "msehi": "LE",
              "request_task_id": "000000028333",
              "show_in_gv": false,
              "take": false,
              "unit_price": 0
          }
      ],
      "canton_flood_hazard": true,
      "canton_forest_distance": true,
      "canton_groundwater_lowering_planned": true,
      "canton_group": "DIBA Test Team",
      "canton_group_name": "DIBA Test Team",
      "canton_hiking_trails": true,
      "canton_internal_deadline": "20250811",
      "canton_justification": "Sommerferien",
      "canton_koko_date": "20250621",
      "canton_koko_status": null,
      "canton_lwag_number": "1111111",
      "canton_major_accident_ordinance_affected": true,
      "canton_material_extraction": true,
      "canton_monument_protection": true,
      "canton_municipal_decision": "20250627",
      "canton_noise_protection": true,
      "canton_processing_duration_days": 108,
      "canton_protection_zones": [
          {
              "value": "Grundwasserschutzzone"
          },
          {
              "value": "Landschaftsschutzzone"
          }
      ],
      "canton_provisional_closure_date": "20250930",
      "canton_railways": [
          {
              "value": "AVA"
          },
          {
              "value": "SBB"
          }
      ],
      "canton_roads": [
          {
              "value": "Hauptverkehrsstrasse (HVS) (111)"
          },
          {
              "value": "Nationalstrasse (Hochleistungsstrasse, HLS) (123)"
          }
      ],
      "canton_sewerage": "Nicht angeschlossen",
      "canton_special_case_dev": true,
      "canton_status_history": [
          {
              "action_text": "Dokument hinzugefügt",
              "comment": "Dokument hinzugefügt mit der ID 0000000000000010001687849",
              "document_id": null,
              "document_version": null,
              "source": "S",
              "step_text": "Gesuch in Bearbeitung",
              "timestamp": 20230315101228,
              "who_text": "Kantons Admin eBau extended"
          },
          {
              "action_text": "Status Änderung",
              "comment": "Gesuchsstatus wurde in \"Freigabeverfahren\" geändert.",
              "document_id": null,
              "document_version": null,
              "source": "S",
              "step_text": "Status Änderung",
              "timestamp": 20230315102239,
              "who_text": "Kantons Admin eBau extended"
          }
      ],
      "canton_subsequent_application": true,
      "canton_townscape_protection": true,
      "canton_traffic": true,
      "canton_usage_zones": [
          {
              "value": "Innerhalb der Bauzone"
          },
          {
              "value": "Materialabbauzone"
          }
      ],
      "canton_water_affected": true,
      "canton_waters": [
          {
              "value": "1234 - DIBA-See"
          },
          {
              "value": "2345 - eBau - Weiher"
          }
      ],
      "cantonal_id": "BVUAFB.21.104",
      "cantonal_status": "Neues Gesuch",
      "city": "Aarau",
      "comments": [
          {
              "text": "Kommentar aus eBau AG",
              "timestamp": "2025-06-17T15:06:13+02:00",
              "userid": "EB2_AFB_01",
              "username": "Markus Test Krause Test"
          }
      ],
      "commercial_and_industrial_sector": "Telekommunikation",
      "commercial_and_industrial_type_of_use": "Gewerbe",
      "commercial_and_industrial_use": true,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": 1240872.0,
              "n": 2635136.0
          }
      ],
      "cost_building_without_land": 1700000.0,
      "cost_environmental_works": 40000.0,
      "cost_total": 1740000.0,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "deadlines": [
          {
              "completed": true,
              "date_from": "2024-06-13T00:00:00+02:00",
              "date_to": "2024-06-13T00:00:00+02:00",
              "notice": "Stellungnahme eBau Training FS ebau.training+fs@gmail.com",
              "reason": null,
              "type": "Frist"
          },
          {
              "completed": true,
              "date_from": "2024-07-12T00:00:00+02:00",
              "date_to": "2024-07-12T00:00:00+02:00",
              "notice": "Stellungnahme eBau extFachstelle Viktor Sch. ebau.extended+extFS@gmail.com",
              "reason": null,
              "type": "Auflagefrist"
          }
      ],
      "decision_date": null,
      "decisions": [
          {
              "decision_date": "2024-11-12T00:00:00+01:00",
              "legal_binding_date": "2024-11-28T00:00:00+01:00",
              "legal_remedy_taken_date": null,
              "remark": null,
              "type": "Bewilligung"
          },
          {
              "decision_date": "2025-07-22T00:00:00+02:00",
              "legal_binding_date": "2025-07-28T00:00:00+02:00",
              "legal_remedy_taken_date": null,
              "remark": "Nur der Schuppen",
              "type": "Bewilligung"
          }
      ],
      "description": "Dies ist eine detaillierte Beschreibung",
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_types": {
          "abbruchgesuch": false,
          "anfrage": false,
          "baugesuch": true,
          "pgv": false,
          "reklamegesuch": false,
          "rodung": false,
          "umnutzung": false,
          "uvp": true,
          "vorentscheid": false
      },
      "environmental_contaminated_site_affected": true,
      "environmental_energy_certificate_required": true,
      "environmental_geothermal_probes_planned": true,
      "environmental_groundwater_intervention_required": true,
      "environmental_material_extraction_planned": true,
      "environmental_noise_protection_required": true,
      "environmental_sewer_construction_or_change": true,
      "environmental_soil_intervention_planned": true,
      "environmental_solar_installation_planned": true,
      "environmental_special_drilling_or_pump_tests": true,
      "existing_livestock": "50",
      "existing_mandatory_spaces": "2",
      "existing_non_mandatory_spaces": "3",
      "existing_parking_spaces": "1",
      "final_approval_date": null,
      "forest_min_distance_reasoning": "Grund der Unterschreitung",
      "forest_min_distance_undershot": true,
      "forest_project_in_forest": true,
      "id": "EBPA-0001-6924",
      "instance_state": null,
      "invoice_recipient": [
          {
              "company": null,
              "email": "invoices@mapper.ch",
              "first_name": "Invoice",
              "is_juristic_person": false,
              "last_name": "Recipient",
              "phone": null,
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "is_paper": null,
      "landowner": [
          {
              "company": "Grundbesitzer AG",
              "email": "gero.grund@grundbesitz.com",
              "first_name": "Gero",
              "is_juristic_person": true,
              "last_name": "Grund",
              "phone": "+41 61 228 9400",
              "street": "Gundeldingerstr.",
              "street_number": "1",
              "town": "Basel",
              "zip": 4000
          }
      ],
      "leased_land_total_ha": "20000",
      "legal_representative": [
          {
              "company": null,
              "email": "legal@repr.ch",
              "first_name": "Gesetzlicher",
              "is_juristic_person": false,
              "last_name": "Vertreter",
              "phone": null,
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "link": null,
      "municipal_id": "2021-344",
      "municipal_status": "Verfügung erstellt",
      "new_livestock": "75",
      "new_mandatory_spaces": "5",
      "new_non_mandatory_spaces": "6",
      "new_parking_spaces": "4",
      "notes_comments": "Famous last words",
      "other_buildings": true,
      "other_buildings_designation": "Garage",
      "other_buildings_type_of_use": "Privat",
      "other_municipalities": [
          {
              "value": "4271"
          }
      ],
      "outside_building_zone_agricultural_use": true,
      "outside_building_zone_legal_nonconforming_use": true,
      "outside_building_zone_other_project": true,
      "outside_building_zone_terrain_modification": true,
      "overlapping_zone": "Überlagerte Zone",
      "owned_land_total_ha": "10000",
      "parking_affected": true,
      "plot_data": [
          {
              "egrid": null,
              "municipality": "4001",
              "number": "234234"
          },
          {
              "egrid": null,
              "municipality": "4271",
              "number": "123123"
          }
      ],
      "procedural_status": [
          {
              "action": "Dokumente an Kanton senden",
              "comment": "Dokumente vom Gesuch EBPA-0219-7779 wurden an den Kanton gesendet.",
              "step": "Dokumente an Kanton gesendet",
              "timestamp": "2022-10-20T14:29:00+02:00",
              "username": "EB2_AFB_02"
          },
          {
              "action": "Gesuch an Kanton senden",
              "comment": "Gesuch EBPA-0219-7779 wurde an den Kanton gesendet.",
              "step": "Gesuch an Kanton gesendet",
              "timestamp": "2022-10-13T09:51:22+02:00",
              "username": "Testautomatisierung EBP"
          }
      ],
      "profile_approval_date": "20250501",
      "profiling": true,
      "profiling_date": "20240213",
      "profiling_reasoning": null,
      "project_author": [
          {
              "company": "Architekturbüro Bauschön",
              "email": "schoen@bauschoen.ar",
              "first_name": "Benno",
              "is_juristic_person": true,
              "last_name": "Schön",
              "phone": "076 123 23456",
              "street": "Im schönen Ort",
              "street_number": "3",
              "town": "Belair",
              "zip": 1234
          }
      ],
      "proposal": "EFH Muster",
      "publication_date": null,
      "ratio_coverage_building_project": "1.9",
      "ratio_coverage_zone_regulation": "2.8",
      "ratio_floor_area_building_project": "3.7",
      "ratio_floor_area_zone_regulation": "6.4",
      "ratio_green_area_building_project": "5.5",
      "ratio_green_area_zone_regulation": "4.6",
      "ratio_utilization_building_project": "9.1",
      "ratio_utilization_zone_regulation": "10.0",
      "ratio_volume_building_project": "7.3",
      "ratio_volume_zone_regulation": "8.2",
      "residence": [
          {
              "number_of_residential_units": 2,
              "number_of_rooms": 2.0,
              "of_which_second_homes": 1
          },
          {
              "number_of_residential_units": 2,
              "number_of_rooms": null,
              "of_which_second_homes": null
          },
          {
              "number_of_residential_units": 3,
              "number_of_rooms": 3.0,
              "of_which_second_homes": 1
          }
      ],
      "residential_use": true,
      "responsible": null,
      "responsible_municipality": "4001",
      "safety_employees_affected": true,
      "safety_fire_protection_canton_required": true,
      "safety_fire_protection_communal_required": true,
      "safety_fire_protection_heating_required": true,
      "safety_flood_prone_area": true,
      "safety_incident_zone_or_infrastructure": true,
      "safety_shelter_obligation": true,
      "sewage_connection_construction": true,
      "sewage_connection_construction_presence": "nicht angeschlossen",
      "sewage_connection_property": true,
      "sewage_connection_property_presence": "bestehend",
      "special_airspace_obstacle_planned": true,
      "special_monument_or_visibility_affected": true,
      "special_public_water_body_affected": true,
      "special_use_plan": "Sondernutzungsplanung",
      "special_water_body_name": "Bodensee",
      "special_water_distance_reasoning": "Ich habe nah am Wasser gebaut",
      "special_water_distance_undershot": true,
      "special_water_intervention_planned": true,
      "stormwater_infiltration": true,
      "stormwater_infiltration_new": false,
      "stormwater_public_water": true,
      "stormwater_public_water_new": false,
      "stormwater_self_use": true,
      "stormwater_sewage": true,
      "stormwater_sewage_new": false,
      "street": "Aarau-Mapping-Str. 1",
      "street_advertising_planned": true,
      "street_highway_affected": true,
      "street_min_distance_reasoning": "Grund der Unterschreitung",
      "street_min_distance_undershot": true,
      "street_new_or_intensified_access": true,
      "street_number": null,
      "submission_reason": "Nacherfassung",
      "submit_date": "20210629",
      "usage": null,
      "usage_zone": "Nuzungszone",
      "workflow_docs": [
          {
              "date": "2024-06-05T10:36:27+02:00",
              "dms_id": "0000000000000010001922835",
              "dms_version": "00",
              "doc_type": "Stellungnahme einfordern",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2D652AD0EF8B3"
          },
          {
              "date": "2024-06-05T10:36:27+02:00",
              "dms_id": "0000000000000010001925809",
              "dms_version": "01",
              "doc_type": "Stellungnahme einfordern",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2D652AD0EF8B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001922835",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001922836",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925808",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925809",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925809",
              "dms_version": "01",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925810",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925811",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-05T10:37:26+02:00",
              "dms_id": "0000000000000010001925814",
              "dms_version": "00",
              "doc_type": "Rückbau akzeptieren",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "date": "2024-06-24T14:29:54+02:00",
              "dms_id": "0000000000000010001925809",
              "dms_version": "01",
              "doc_type": "Stellungnahme einfordern",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF8CC4AEB16F86B8B4"
          },
          {
              "date": "2024-06-24T14:29:54+02:00",
              "dms_id": "0000000000000010001925811",
              "dms_version": "00",
              "doc_type": "Stellungnahme einfordern",
              "recipient_id": null,
              "remark": null,
              "workflow_id": "005056ABB4351EDF8CC4AEB16F86B8B4"
          }
      ],
      "workflow_recipients": [
          {
              "active": false,
              "date": "2024-06-05T00:00:00+02:00",
              "docs": null,
              "id": "005056ABB4351EDF88E2D652AD0F18B3",
              "manually_added": false,
              "reason": null,
              "remark": null,
              "request": null,
              "status": "Offen",
              "user_email": "ebau.training+fs@gmail.com",
              "user_id": "N433697952",
              "user_name": "eBau Training FS",
              "workflow_id": "005056ABB4351EDF88E2D652AD0EF8B3"
          },
          {
              "active": false,
              "date": "2024-06-24T00:00:00+02:00",
              "docs": null,
              "id": "005056ABB4351EDF8CC4AEB16F86D8B4",
              "manually_added": false,
              "reason": null,
              "remark": null,
              "request": null,
              "status": "Offen",
              "user_email": "ebau.extended+extFS@gmail.com",
              "user_id": "N858614511",
              "user_name": "eBau extFachstelle Viktor Sch.",
              "workflow_id": "005056ABB4351EDF88E2D652AD0EF8B3"
          },
          {
              "active": true,
              "date": "2024-06-05T10:37:26+02:00",
              "docs": null,
              "id": "005056ABB4351EDF88E2DA476D3F38B3",
              "manually_added": false,
              "reason": null,
              "remark": null,
              "request": null,
              "status": null,
              "user_email": "ebau.training+fs@gmail.com",
              "user_id": null,
              "user_name": "eBau Training FS",
              "workflow_id": "005056ABB4351EDF88E2DA476D3F18B3"
          },
          {
              "active": true,
              "date": "2024-06-24T14:29:54+02:00",
              "docs": null,
              "id": "005056ABB4351EDF8CC4AEB16F86D8B4",
              "manually_added": false,
              "reason": null,
              "remark": null,
              "request": null,
              "status": "Offen",
              "user_email": "ebau.extended+extFS@gmail.com",
              "user_id": "N858614511",
              "user_name": "eBau extFachstelle Viktor Sch.",
              "workflow_id": "005056ABB4351EDF8CC4AEB16F86B8B4"
          }
      ],
      "workflows": [
          {
              "active": true,
              "date": "2024-06-05T00:00:00+02:00",
              "docs": null,
              "id": "005056ABB4351EDF88E2D652AD0EF8B3",
              "recipients": null,
              "status": "offen",
              "workflow_type": "Stellungnahme Gesuch"
          },
          {
              "active": true,
              "date": "2024-06-05T00:00:00+02:00",
              "docs": null,
              "id": "005056ABB4351EDF88E2DA476D3F18B3",
              "recipients": null,
              "status": null,
              "workflow_type": "Einsicht"
          },
          {
              "active": true,
              "date": "2024-06-24T00:00:00+02:00",
              "docs": null,
              "id": "005056ABB4351EDF8CC4AEB16F86B8B4",
              "recipients": null,
              "status": "offen",
              "workflow_type": "Stellungnahme Gesuch"
          }
      ],
      "zone_flood_hazard": true,
      "zone_seismic_compliance": "nicht erforderlich",
      "zone_sensitivity_level": "4",
      "zone_spring_capture_area": true,
      "zone_water_protection_area_au": true,
      "zone_water_protection_area_bc": true,
      "zoning_area": "innerhalb rechtskräftiger Bauzone"
  }
  '''
# ---
# name: test_empty_string
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "DRAFT",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": false,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "authorizations": [],
      "building": [],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": false,
      "building_heating_new": false,
      "building_heating_new_kw": null,
      "building_heating_none": false,
      "building_heating_replacement": false,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": false,
      "building_heating_type_electric": false,
      "building_heating_type_gas": false,
      "building_heating_type_heatpump": false,
      "building_heating_type_heatpump_air": false,
      "building_heating_type_heatpump_ground_water": false,
      "building_heating_type_oil": false,
      "building_heating_type_oil_new": false,
      "building_heating_type_other": false,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": false,
      "building_heating_unknown": false,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "canton_agv": false,
      "canton_application_codes": [],
      "canton_archaeology": false,
      "canton_area_consumption": null,
      "canton_assignee": null,
      "canton_awa": false,
      "canton_cantonal_road_affected": false,
      "canton_closure_code": null,
      "canton_comments": [],
      "canton_construction_project_in_forest": false,
      "canton_cycle_paths": false,
      "canton_decision_type": null,
      "canton_delay_caused_by": null,
      "canton_entry_date": null,
      "canton_fees": [],
      "canton_flood_hazard": false,
      "canton_forest_distance": false,
      "canton_groundwater_lowering_planned": false,
      "canton_group": null,
      "canton_group_name": null,
      "canton_hiking_trails": false,
      "canton_internal_deadline": null,
      "canton_justification": null,
      "canton_koko_date": null,
      "canton_koko_status": null,
      "canton_lwag_number": null,
      "canton_major_accident_ordinance_affected": false,
      "canton_material_extraction": false,
      "canton_monument_protection": false,
      "canton_municipal_decision": null,
      "canton_noise_protection": false,
      "canton_processing_duration_days": null,
      "canton_protection_zones": [],
      "canton_provisional_closure_date": null,
      "canton_railways": [],
      "canton_roads": [],
      "canton_sewerage": null,
      "canton_special_case_dev": false,
      "canton_status_history": [],
      "canton_subsequent_application": false,
      "canton_townscape_protection": false,
      "canton_traffic": false,
      "canton_usage_zones": [],
      "canton_water_affected": false,
      "canton_waters": [],
      "cantonal_id": null,
      "cantonal_status": null,
      "city": null,
      "comments": [],
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": false,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "deadlines": [],
      "decision_date": null,
      "decisions": [],
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_types": {
          "abbruchgesuch": false,
          "anfrage": false,
          "baugesuch": false,
          "pgv": false,
          "reklamegesuch": false,
          "rodung": false,
          "umnutzung": false,
          "uvp": false,
          "vorentscheid": false
      },
      "environmental_contaminated_site_affected": false,
      "environmental_energy_certificate_required": false,
      "environmental_geothermal_probes_planned": false,
      "environmental_groundwater_intervention_required": false,
      "environmental_material_extraction_planned": false,
      "environmental_noise_protection_required": false,
      "environmental_sewer_construction_or_change": false,
      "environmental_soil_intervention_planned": false,
      "environmental_solar_installation_planned": false,
      "environmental_special_drilling_or_pump_tests": false,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": false,
      "forest_project_in_forest": false,
      "id": null,
      "instance_state": null,
      "invoice_recipient": [],
      "is_paper": null,
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": null,
      "municipal_status": null,
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": false,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [],
      "outside_building_zone_agricultural_use": false,
      "outside_building_zone_legal_nonconforming_use": false,
      "outside_building_zone_other_project": false,
      "outside_building_zone_terrain_modification": false,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": false,
      "plot_data": [],
      "procedural_status": [],
      "profile_approval_date": null,
      "profiling": false,
      "profiling_date": null,
      "profiling_reasoning": null,
      "project_author": [],
      "proposal": null,
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": false,
      "responsible": null,
      "responsible_municipality": null,
      "safety_employees_affected": false,
      "safety_fire_protection_canton_required": false,
      "safety_fire_protection_communal_required": false,
      "safety_fire_protection_heating_required": false,
      "safety_flood_prone_area": false,
      "safety_incident_zone_or_infrastructure": false,
      "safety_shelter_obligation": false,
      "sewage_connection_construction": false,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": false,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": false,
      "special_monument_or_visibility_affected": false,
      "special_public_water_body_affected": false,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": false,
      "special_water_intervention_planned": false,
      "stormwater_infiltration": false,
      "stormwater_infiltration_new": false,
      "stormwater_public_water": false,
      "stormwater_public_water_new": false,
      "stormwater_self_use": false,
      "stormwater_sewage": false,
      "stormwater_sewage_new": false,
      "street": null,
      "street_advertising_planned": false,
      "street_highway_affected": false,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": false,
      "street_new_or_intensified_access": false,
      "street_number": null,
      "submission_reason": null,
      "submit_date": null,
      "usage": null,
      "usage_zone": null,
      "workflow_docs": [],
      "workflow_recipients": [],
      "workflows": [],
      "zone_flood_hazard": false,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": false,
      "zone_water_protection_area_au": false,
      "zone_water_protection_area_bc": false,
      "zoning_area": null
  }
  '''
# ---
# name: test_mapping_for_multiple_locations
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "DRAFT",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": false,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "authorizations": [],
      "building": [
          {
              "egid": null,
              "insurance_number": null
          },
          {
              "egid": null,
              "insurance_number": null
          },
          {
              "egid": null,
              "insurance_number": null
          }
      ],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": false,
      "building_heating_new": false,
      "building_heating_new_kw": null,
      "building_heating_none": false,
      "building_heating_replacement": false,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": false,
      "building_heating_type_electric": false,
      "building_heating_type_gas": false,
      "building_heating_type_heatpump": false,
      "building_heating_type_heatpump_air": false,
      "building_heating_type_heatpump_ground_water": false,
      "building_heating_type_oil": false,
      "building_heating_type_oil_new": false,
      "building_heating_type_other": false,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": false,
      "building_heating_unknown": false,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "canton_agv": false,
      "canton_application_codes": [],
      "canton_archaeology": false,
      "canton_area_consumption": null,
      "canton_assignee": null,
      "canton_awa": false,
      "canton_cantonal_road_affected": false,
      "canton_closure_code": null,
      "canton_comments": [],
      "canton_construction_project_in_forest": false,
      "canton_cycle_paths": false,
      "canton_decision_type": null,
      "canton_delay_caused_by": null,
      "canton_entry_date": null,
      "canton_fees": [],
      "canton_flood_hazard": false,
      "canton_forest_distance": false,
      "canton_groundwater_lowering_planned": false,
      "canton_group": null,
      "canton_group_name": null,
      "canton_hiking_trails": false,
      "canton_internal_deadline": null,
      "canton_justification": null,
      "canton_koko_date": null,
      "canton_koko_status": null,
      "canton_lwag_number": null,
      "canton_major_accident_ordinance_affected": false,
      "canton_material_extraction": false,
      "canton_monument_protection": false,
      "canton_municipal_decision": null,
      "canton_noise_protection": false,
      "canton_processing_duration_days": null,
      "canton_protection_zones": [],
      "canton_provisional_closure_date": null,
      "canton_railways": [],
      "canton_roads": [],
      "canton_sewerage": null,
      "canton_special_case_dev": false,
      "canton_status_history": [],
      "canton_subsequent_application": false,
      "canton_townscape_protection": false,
      "canton_traffic": false,
      "canton_usage_zones": [],
      "canton_water_affected": false,
      "canton_waters": [],
      "cantonal_id": null,
      "cantonal_status": null,
      "city": "Möhlin",
      "comments": [],
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": false,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": null,
              "n": null
          },
          {
              "e": null,
              "n": null
          }
      ],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "deadlines": [],
      "decision_date": null,
      "decisions": [],
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_types": {
          "abbruchgesuch": false,
          "anfrage": false,
          "baugesuch": false,
          "pgv": false,
          "reklamegesuch": false,
          "rodung": false,
          "umnutzung": false,
          "uvp": false,
          "vorentscheid": false
      },
      "environmental_contaminated_site_affected": false,
      "environmental_energy_certificate_required": false,
      "environmental_geothermal_probes_planned": false,
      "environmental_groundwater_intervention_required": false,
      "environmental_material_extraction_planned": false,
      "environmental_noise_protection_required": false,
      "environmental_sewer_construction_or_change": false,
      "environmental_soil_intervention_planned": false,
      "environmental_solar_installation_planned": false,
      "environmental_special_drilling_or_pump_tests": false,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": false,
      "forest_project_in_forest": false,
      "id": null,
      "instance_state": null,
      "invoice_recipient": [],
      "is_paper": null,
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": null,
      "municipal_status": null,
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": false,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [
          {
              "value": "4271"
          }
      ],
      "outside_building_zone_agricultural_use": false,
      "outside_building_zone_legal_nonconforming_use": false,
      "outside_building_zone_other_project": false,
      "outside_building_zone_terrain_modification": false,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": false,
      "plot_data": [],
      "procedural_status": [],
      "profile_approval_date": null,
      "profiling": false,
      "profiling_date": null,
      "profiling_reasoning": null,
      "project_author": [],
      "proposal": null,
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": false,
      "responsible": null,
      "responsible_municipality": "4254",
      "safety_employees_affected": false,
      "safety_fire_protection_canton_required": false,
      "safety_fire_protection_communal_required": false,
      "safety_fire_protection_heating_required": false,
      "safety_flood_prone_area": false,
      "safety_incident_zone_or_infrastructure": false,
      "safety_shelter_obligation": false,
      "sewage_connection_construction": false,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": false,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": false,
      "special_monument_or_visibility_affected": false,
      "special_public_water_body_affected": false,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": false,
      "special_water_intervention_planned": false,
      "stormwater_infiltration": false,
      "stormwater_infiltration_new": false,
      "stormwater_public_water": false,
      "stormwater_public_water_new": false,
      "stormwater_self_use": false,
      "stormwater_sewage": false,
      "stormwater_sewage_new": false,
      "street": "Musterstrasse",
      "street_advertising_planned": false,
      "street_highway_affected": false,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": false,
      "street_new_or_intensified_access": false,
      "street_number": "1",
      "submission_reason": null,
      "submit_date": null,
      "usage": null,
      "usage_zone": null,
      "workflow_docs": [],
      "workflow_recipients": [],
      "workflows": [],
      "zone_flood_hazard": false,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": false,
      "zone_water_protection_area_au": false,
      "zone_water_protection_area_bc": false,
      "zoning_area": null
  }
  '''
# ---
# name: test_simple_mapping
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "DRAFT",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": false,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "authorizations": [],
      "building": [
          {
              "egid": null,
              "insurance_number": null
          }
      ],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": false,
      "building_heating_new": false,
      "building_heating_new_kw": null,
      "building_heating_none": false,
      "building_heating_replacement": false,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": false,
      "building_heating_type_electric": false,
      "building_heating_type_gas": false,
      "building_heating_type_heatpump": false,
      "building_heating_type_heatpump_air": false,
      "building_heating_type_heatpump_ground_water": false,
      "building_heating_type_oil": false,
      "building_heating_type_oil_new": false,
      "building_heating_type_other": false,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": false,
      "building_heating_unknown": false,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "canton_agv": false,
      "canton_application_codes": [],
      "canton_archaeology": false,
      "canton_area_consumption": null,
      "canton_assignee": null,
      "canton_awa": false,
      "canton_cantonal_road_affected": false,
      "canton_closure_code": null,
      "canton_comments": [],
      "canton_construction_project_in_forest": false,
      "canton_cycle_paths": false,
      "canton_decision_type": null,
      "canton_delay_caused_by": null,
      "canton_entry_date": null,
      "canton_fees": [],
      "canton_flood_hazard": false,
      "canton_forest_distance": false,
      "canton_groundwater_lowering_planned": false,
      "canton_group": null,
      "canton_group_name": null,
      "canton_hiking_trails": false,
      "canton_internal_deadline": null,
      "canton_justification": null,
      "canton_koko_date": null,
      "canton_koko_status": null,
      "canton_lwag_number": null,
      "canton_major_accident_ordinance_affected": false,
      "canton_material_extraction": false,
      "canton_monument_protection": false,
      "canton_municipal_decision": null,
      "canton_noise_protection": false,
      "canton_processing_duration_days": null,
      "canton_protection_zones": [],
      "canton_provisional_closure_date": null,
      "canton_railways": [],
      "canton_roads": [],
      "canton_sewerage": null,
      "canton_special_case_dev": false,
      "canton_status_history": [],
      "canton_subsequent_application": false,
      "canton_townscape_protection": false,
      "canton_traffic": false,
      "canton_usage_zones": [],
      "canton_water_affected": false,
      "canton_waters": [],
      "cantonal_id": "BVUAFB.21.104",
      "cantonal_status": null,
      "city": "Möhlin",
      "comments": [],
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": false,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": 2480000.0,
              "n": 1300000.0
          }
      ],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "deadlines": [],
      "decision_date": null,
      "decisions": [],
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_types": {
          "abbruchgesuch": false,
          "anfrage": false,
          "baugesuch": false,
          "pgv": false,
          "reklamegesuch": false,
          "rodung": false,
          "umnutzung": false,
          "uvp": false,
          "vorentscheid": false
      },
      "environmental_contaminated_site_affected": false,
      "environmental_energy_certificate_required": false,
      "environmental_geothermal_probes_planned": false,
      "environmental_groundwater_intervention_required": false,
      "environmental_material_extraction_planned": false,
      "environmental_noise_protection_required": false,
      "environmental_sewer_construction_or_change": false,
      "environmental_soil_intervention_planned": false,
      "environmental_solar_installation_planned": false,
      "environmental_special_drilling_or_pump_tests": false,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": false,
      "forest_project_in_forest": false,
      "id": "EBPA-0001-6924",
      "instance_state": null,
      "invoice_recipient": [],
      "is_paper": null,
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": "2021-344",
      "municipal_status": null,
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": false,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [],
      "outside_building_zone_agricultural_use": false,
      "outside_building_zone_legal_nonconforming_use": false,
      "outside_building_zone_other_project": false,
      "outside_building_zone_terrain_modification": false,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": false,
      "plot_data": [],
      "procedural_status": [],
      "profile_approval_date": null,
      "profiling": false,
      "profiling_date": null,
      "profiling_reasoning": null,
      "project_author": [],
      "proposal": "EFH Muster",
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": false,
      "responsible": null,
      "responsible_municipality": "4254",
      "safety_employees_affected": false,
      "safety_fire_protection_canton_required": false,
      "safety_fire_protection_communal_required": false,
      "safety_fire_protection_heating_required": false,
      "safety_flood_prone_area": false,
      "safety_incident_zone_or_infrastructure": false,
      "safety_shelter_obligation": false,
      "sewage_connection_construction": false,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": false,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": false,
      "special_monument_or_visibility_affected": false,
      "special_public_water_body_affected": false,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": false,
      "special_water_intervention_planned": false,
      "stormwater_infiltration": false,
      "stormwater_infiltration_new": false,
      "stormwater_public_water": false,
      "stormwater_public_water_new": false,
      "stormwater_self_use": false,
      "stormwater_sewage": false,
      "stormwater_sewage_new": false,
      "street": "Musterstrasse",
      "street_advertising_planned": false,
      "street_highway_affected": false,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": false,
      "street_new_or_intensified_access": false,
      "street_number": "1",
      "submission_reason": null,
      "submit_date": "20210629",
      "usage": null,
      "usage_zone": null,
      "workflow_docs": [],
      "workflow_recipients": [],
      "workflows": [],
      "zone_flood_hazard": false,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": false,
      "zone_water_protection_area_au": false,
      "zone_water_protection_area_bc": false,
      "zoning_area": null
  }
  '''
# ---
